--- a/InventarioPro/Client/Pages/Entrada/ListEntrada.razor
+++ b/InventarioPro/Client/Pages/Entrada/ListEntrada.razor
@@ -193,9 +193,9 @@
 
         if (result != null)
         {
-            Entradas.Add(result);
-
-
+            listentrada_DTO.Add((Entrada_DTO)result);
+            listentrada_DTO = listentrada_DTO.ToList();
+            StateHasChanged();
         }
 
 
