--- a/InventarioPro/Client/Pages/Roles/FormRoles.razor
+++ b/InventarioPro/Client/Pages/Roles/FormRoles.razor
@@ -275,6 +275,35 @@
         </div>
     </div>
 
+    <!-- Fila 12 (Presentacion) -->
+    <div class="row mb-3">
+        <div class="col-md-6 col-lg-4 mb-3">
+            <div class="form-check">
+                <RadzenCheckBox @bind-Value="permiso_DTO.VerPresentacion" />
+                <label class="form-check-label">Ver Presentacion</label>
+            </div>
+        </div>
+        <div class="col-md-6 col-lg-4 mb-3">
+            <div class="form-check">
+                <RadzenCheckBox @bind-Value="permiso_DTO.CrearPresentacion" />
+                <label class="form-check-label">Crear Presentacion</label>
+            </div>
+        </div>
+        <div class="col-md-6 col-lg-4 mb-3">
+            <div class="form-check">
+                <RadzenCheckBox @bind-Value="permiso_DTO.EditarPresentacion" />
+                <label class="form-check-label">Editar Presentacion</label>
+            </div>
+        </div>
+        <div class="col-md-6 col-lg-4 mb-3">
+            <div class="form-check">
+                <RadzenCheckBox @bind-Value="permiso_DTO.EliminarPresentacion" />
+                <label class="form-check-label">Eliminar Presentacion</label>
+            </div>
+        </div>
+    </div>    
+ 
+
 
     <div class="d-flex justify-content-between mt-4">
         <RadzenButton ButtonType="Radzen.ButtonType.Submit" Text="Guardar" Icon="save" class="btn btn-primary" />
