--- a/InventarioPro/Client/Shared/MainLayout.razor
+++ b/InventarioPro/Client/Shared/MainLayout.razor
@@ -51,7 +51,7 @@
 
             @if (permisosUsuario?.VerSuplidor ?? false)
             {
-                <RadzenPanelMenuItem Text="Suplidores" Icon="business" Style="color: white;" />
+                <RadzenPanelMenuItem Text="Proveedores" Icon="business" Path="/ListProveedor" Style="color: white;" />
             }
 
             @if (permisosUsuario?.VerVenta ?? false)
